# Lex-graph

./: README.md  main.py  pyproject.toml  sample.txt  todo.md
engine/: __init__.py  requirements.txt  setup.py  types.py
engine/eval/: __init__.py
engine/ingest/: __init__.py  ingest.py  ingest_impl.py  spacy_ner.py  spacy_ontology_builder.py  spacy_parser.py  spacy_relationship_extractor.py  types.py
engine/ontology/: types.py
engine/preprocessing/: spacy_preprocessor.py  types.py
engine/utils/: __init__.py  error_handling.py  file_io.py  load_nlp_model.py  logger.py  types.py
tests/: __init__.py
